Initial implementation of /appointments API
