# src/main/java/com/avimedical/appointments/scheduling/domain/model/Channel.java
@@ -1,0 +1,5 @@
+package com.avimedical.appointments.scheduling.domain.model;
+
+public enum Channel {
+    IN_PERSON,ONLINE
+}
